# merlin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  field-types.h  field.h  generic-value.h  main.cpp  query.cpp  query.h  table.h  utils.cpp  utils.h
scripts/: build.sh
src/: field-types.h  field.cpp  field.h  http.cpp  http.h  main.cpp  query.cpp  query.h  server.h  table.h
src/example/: sample.cpp
src/http/: create-table.cpp  describe-table.cpp  drop-table.cpp  insert-into-table.cpp  ping.cpp  query-table.cpp  quit.cpp  show-tables.cpp  stats-table.cpp
